--- a/app/src/main/res/layout/list_item_layout.xml
+++ b/app/src/main/res/layout/list_item_layout.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent">
 
     <LinearLayout
+        android:id="@+id/image_wrap"
         android:orientation="vertical"
         android:layout_width="64dp"
         android:layout_height="64dp">
@@ -17,7 +18,7 @@
     </LinearLayout>
 
     <RelativeLayout
-        android:layout_toRightOf="@+id/image"
+        android:layout_toRightOf="@+id/image_wrap"
         android:layout_width="wrap_content"
         android:layout_height="match_parent">
 
