--- a/app/src/main/res/layout/list_item_layout.xml
+++ b/app/src/main/res/layout/list_item_layout.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <LinearLayout
         android:id="@+id/image_wrap"
@@ -18,6 +17,7 @@
     </LinearLayout>
 
     <RelativeLayout
+        android:layout_toEndOf="@+id/image_wrap"
         android:layout_toRightOf="@+id/image_wrap"
         android:layout_width="wrap_content"
         android:layout_height="match_parent">
@@ -26,7 +26,7 @@
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="12px" />
+            android:textSize="16sp" />
 
         <TextView
             android:id="@+id/desc"
